--- a/email_domens.ipynb
+++ b/email_domens.ipynb
@@ -131,9 +131,9 @@
     "\n",
     "for domen in tqdm(range(len(domens))):\n",
     "    it = domen\n",
-    "    colvir = list(domens)[domen]\n",
-    "    colvir_domens = domens[list(domens)[domen]]\n",
-    "    for domen in colvir_domens: \n",
+    "    id_c = list(domens)[domen]\n",
+    "    id_domens = domens[list(domens)[domen]]\n",
+    "    for domen in id_domens: \n",
     "        try:\n",
     "            resp = requests.get(f'https://{domen}', headers=head, verify=False, timeout=10)\n",
     "            #перенаправление на актуальный адрес\n",
@@ -148,7 +148,7 @@
     "                if any(e in crakozbr for e in title.lower()):\n",
     "                    title = title.encode('windows-1252').decode('cp1251', errors='ignore')\n",
     "            except: title = ''\n",
-    "            real_domens.append([colvir, domen, location, resp.status_code, ' '.join(title.split())])\n",
+    "            real_domens.append([id, domen, location, resp.status_code, ' '.join(title.split())])\n",
     "        except:\n",
     "            try:\n",
     "                resp = requests.get(f'http://{domen}', headers=head, verify=False, timeout=10)\n",
@@ -161,7 +161,7 @@
     "                    if 'Ð' in title:\n",
     "                        title = title.encode('latin1').decode('utf8')\n",
     "                except: title = ''\n",
-    "                real_domens.append([colvir, domen, location, resp.status_code, ' '.join(title.split())])\n",
+    "                real_domens.append([id, domen, location, resp.status_code, ' '.join(title.split())])\n",
     "            except: \n",
     "                pass"
    ]
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "#пишем в датафрейм и csv\n",
-    "dfcsv = pd.DataFrame(real_domens, columns=['colvir', 'domen', 'location', 'status_code', 'title'])\n",
+    "dfcsv = pd.DataFrame(real_domens, columns=['id', 'domen', 'location', 'status_code', 'title'])\n",
     "dfcsv.to_csv('сайты.csv', index=False)"
    ]
   }
